--- a/RestBucks.Tests/RestBucks.Tests.csproj
+++ b/RestBucks.Tests/RestBucks.Tests.csproj
@@ -131,10 +131,11 @@
     <Compile Include="Domain\GivenAReadyOrder.cs" />
     <Compile Include="Domain\OrderTests.cs" />
     <Compile Include="Domain\EqualityMemberTests.cs" />
-    <Compile Include="LocationsSpecification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Representations\OrderRepresentationJsonTests.cs" />
     <Compile Include="Representations\OrderRepresentationTests.cs" />
+    <Compile Include="Resources\ResourceHandlerTestBase.cs" />
+    <Compile Include="Resources\WhenUserGETsMenu.cs" />
     <Compile Include="Resources\WhenUserPayAnOrder.cs" />
     <Compile Include="Resources\WhenUserGETsAnOrder.cs" />
     <Compile Include="Resources\WhenUserUpdateAnOrder.cs" />
