added Nancy.Bootstrappers.Windsor to web project

--- a/RestBucks/packages.config
+++ b/RestBucks/packages.config
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="2.5.2" />
+  <package id="Castle.Core" version="3.0.0.4001" />
   <package id="Castle.Core-log4net" version="2.5.2" />
-  <package id="Castle.Windsor" version="2.5.3" />
+  <package id="Castle.Windsor" version="3.0.0.4001" />
   <package id="Castle.Windsor-log4net" version="2.5.2" />
   <package id="HttpClient" version="0.3.0" />
   <package id="Iesi.Collections" version="3.2.0.1002" />
   <package id="JsonValue" version="0.3.0" />
   <package id="log4net" version="1.2.10" />
   <package id="Nancy" version="0.10.0" />
+  <package id="Nancy.Bootstrappers.Windsor" version="0.10.0" />
   <package id="Newtonsoft.Json" version="4.0.2" />
   <package id="NHibernate" version="3.2.0.1002" />
   <package id="NHibernate.SetForNet4" version="1.0.1" />
