--- a/RestBucks/packages.config
+++ b/RestBucks/packages.config
@@ -10,6 +10,7 @@
   <package id="log4net" version="1.2.10" />
   <package id="Nancy" version="0.10.0" />
   <package id="Nancy.Bootstrappers.Windsor" version="0.10.0" />
+  <package id="Nancy.Hosting.Aspnet" version="0.10.0" />
   <package id="Newtonsoft.Json" version="4.0.2" />
   <package id="NHibernate" version="3.2.0.1002" />
   <package id="NHibernate.SetForNet4" version="1.0.1" />
