--- a/RestBucks/packages.config
+++ b/RestBucks/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.0.0.4001" />
-  <package id="Castle.Windsor" version="3.0.0.4001" />
+  <package id="Castle.Core" version="3.1.0" targetFramework="net40" />
+  <package id="Castle.Windsor" version="3.1.0" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.2.0.1002" />
-  <package id="Nancy" version="0.11.0" />
-  <package id="Nancy.Bootstrappers.Windsor" version="0.11.0" />
-  <package id="Nancy.Hosting.Aspnet" version="0.11.0" />
+  <package id="Nancy" version="0.12.0" targetFramework="net40" />
+  <package id="Nancy.Bootstrappers.Windsor" version="0.12.0" targetFramework="net40" />
+  <package id="Nancy.Hosting.Aspnet" version="0.12.0" targetFramework="net40" />
   <package id="NHibernate" version="3.2.0.1002" />
   <package id="NHibernate.SetForNet4" version="1.0.1" />
   <package id="Rx-Main" version="1.0.10605" />
+  <package id="YamlSerializer" version="1.0" />
 </packages>
