--- a/RestBucks.Tests/packages.config
+++ b/RestBucks.Tests/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.0.0.4001" />
-  <package id="Castle.Windsor" version="3.0.0.4001" />
+  <package id="Castle.Core" version="3.1.0" targetFramework="net40" />
+  <package id="Castle.Windsor" version="3.1.0" targetFramework="net40" />
+  <package id="CsQuery" version="1.2.1" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.2.0.1002" />
   <package id="Moq" version="4.0.10827" />
-  <package id="Nancy" version="0.11.0" />
-  <package id="Nancy.Testing" version="0.11.0" />
+  <package id="Nancy" version="0.12.0" targetFramework="net40" />
+  <package id="Nancy.Testing" version="0.12.0" targetFramework="net40" />
   <package id="NHibernate" version="3.2.0.1002" />
   <package id="NUnit" version="2.5.9.10348" />
   <package id="SharpTestsEx" version="1.1.1" />
-  <package id="xunit" version="1.7.0.1540" />
 </packages>
