--- a/RestBucks.Tests/packages.config
+++ b/RestBucks.Tests/packages.config
@@ -6,6 +6,7 @@
   <package id="Iesi.Collections" version="3.2.0.1002" />
   <package id="Moq" version="4.0.10827" />
   <package id="Nancy" version="0.12.0" targetFramework="net40" />
+  <package id="Nancy.Bootstrappers.Windsor" version="0.12.0" targetFramework="net40" />
   <package id="Nancy.Testing" version="0.12.0" targetFramework="net40" />
   <package id="NHibernate" version="3.2.0.1002" />
   <package id="NUnit" version="2.5.9.10348" />
