Horrific hack to return enums as camel cased strings in json responses

--- a/RestBucks.Tests/RestBucks.Tests.csproj
+++ b/RestBucks.Tests/RestBucks.Tests.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Domain\GivenAReadyOrder.cs" />
     <Compile Include="Domain\OrderTests.cs" />
     <Compile Include="Domain\EqualityMemberTests.cs" />
+    <Compile Include="Infrastructure\CamelCaseEnumConverterTests.cs" />
     <Compile Include="Infrastructure\Linking\ResourceLinkerTests.cs" />
     <Compile Include="Infrastructure\RequestExtensionsTests.cs" />
     <Compile Include="IntegrationSmokeTests.cs" />
