--- a/RestBucks/RestBucks.csproj
+++ b/RestBucks/RestBucks.csproj
@@ -113,17 +113,17 @@
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Bots\Barista.cs" />
-    <Compile Include="Domain\BaseClass\IVersionable.cs" />
     <Compile Include="Data\Impl\Repository.cs" />
     <Compile Include="Data\IRepository.cs" />
     <Compile Include="Data\Mapper.cs" />
     <Compile Include="Data\ProductExtensions.cs" />
-    <Compile Include="Domain\BaseClass\IValidable.cs" />
-    <Compile Include="Domain\Customization.cs" />
-    <Compile Include="Domain\BaseClass\EntityBase.cs" />
-    <Compile Include="Domain\Location.cs" />
-    <Compile Include="Domain\Order.cs" />
-    <Compile Include="Domain\OrderItem.cs" />
+    <Compile Include="Infrastructure\Domain\BaseClass\EntityBase.cs" />
+    <Compile Include="Infrastructure\Domain\BaseClass\IValidable.cs" />
+    <Compile Include="Infrastructure\Domain\BaseClass\IVersionable.cs" />
+    <Compile Include="Infrastructure\Domain\Customization.cs" />
+    <Compile Include="Infrastructure\Resources\Link.cs" />
+    <Compile Include="Infrastructure\Resources\MediaTypes.cs" />
+    <Compile Include="Infrastructure\Resources\RepresentationBase.cs" />
     <Compile Include="Infrastructure\YammlResponseProcessor.cs" />
     <Compile Include="Infrastructure\Data\Net4Collections.cs" />
     <Compile Include="Infrastructure\Installers\BotInstaller.cs" />
@@ -131,32 +131,26 @@
     <Compile Include="Infrastructure\RequestExtensions.cs" />
     <Compile Include="Infrastructure\UriSegment.cs" />
     <Compile Include="Infrastructure\XmlResponseProcessor.cs" />
-    <Compile Include="Resources\Orders\TrashHandler.cs" />
-    <Compile Include="Resources\Orders\Representations\OrderRepresentationMapper.cs" />
-    <Compile Include="Resources\Orders\Representations\PaymentRepresentation.cs" />
-    <Compile Include="Domain\OrderStatus.cs" />
-    <Compile Include="Domain\Product.cs" />
+    <Compile Include="Menu\ItemRepresentation.cs" />
+    <Compile Include="Menu\MenuRepresentation.cs" />
+    <Compile Include="Menu\MenuResourceHandler.cs" />
+    <Compile Include="Orders\Domain\Location.cs" />
+    <Compile Include="Orders\Domain\Order.cs" />
+    <Compile Include="Orders\Domain\OrderItem.cs" />
+    <Compile Include="Orders\Domain\OrderStatus.cs" />
+    <Compile Include="Orders\OrderResourceHandler.cs" />
+    <Compile Include="Orders\OrdersResourceHandler.cs" />
+    <Compile Include="Orders\Representations\OrderItemRepresentation.cs" />
+    <Compile Include="Orders\Representations\OrderRepresentation.cs" />
+    <Compile Include="Orders\Representations\OrderRepresentationMapper.cs" />
+    <Compile Include="Orders\Representations\PaymentRepresentation.cs" />
+    <Compile Include="Orders\TrashHandler.cs" />
+    <Compile Include="Products\Domain\Product.cs" />
     <Compile Include="Infrastructure\Installers\NHibernateInstaller.cs" />
     <Compile Include="Infrastructure\Installers\RepositoryInstaller.cs" />
     <Compile Include="Infrastructure\Linking\ResourceLinker.cs" />
     <Compile Include="Infrastructure\Responses.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources\Orders\OrderResourceHandler.cs" />
-    <Compile Include="Resources\MediaTypes.cs" />
-    <Compile Include="Resources\Orders\OrdersResourceHandler.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Resources\Orders\Representations\OrderItemRepresentation.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Resources\Orders\Representations\OrderRepresentation.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Resources\RepresentationBase.cs" />
-    <Compile Include="Resources\Link.cs" />
-    <Compile Include="Resources\Menu\ItemRepresentation.cs" />
-    <Compile Include="Resources\Menu\MenuRepresentation.cs" />
-    <Compile Include="Resources\Menu\MenuResourceHandler.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
