call all nancy modules 'module' to cut down on terminology

--- a/RestBucks/RestBucks.csproj
+++ b/RestBucks/RestBucks.csproj
@@ -133,18 +133,18 @@
     <Compile Include="Infrastructure\XmlResponseProcessor.cs" />
     <Compile Include="Menu\ItemRepresentation.cs" />
     <Compile Include="Menu\MenuRepresentation.cs" />
-    <Compile Include="Menu\MenuResourceHandler.cs" />
+    <Compile Include="Menu\MenuResourceModule.cs" />
     <Compile Include="Orders\Domain\Location.cs" />
     <Compile Include="Orders\Domain\Order.cs" />
     <Compile Include="Orders\Domain\OrderItem.cs" />
     <Compile Include="Orders\Domain\OrderStatus.cs" />
-    <Compile Include="Orders\OrderResourceHandler.cs" />
-    <Compile Include="Orders\OrdersResourceHandler.cs" />
+    <Compile Include="Orders\OrderResourceModule.cs" />
+    <Compile Include="Orders\OrdersResourceModule.cs" />
     <Compile Include="Orders\Representations\OrderItemRepresentation.cs" />
     <Compile Include="Orders\Representations\OrderRepresentation.cs" />
     <Compile Include="Orders\Representations\OrderRepresentationMapper.cs" />
     <Compile Include="Orders\Representations\PaymentRepresentation.cs" />
-    <Compile Include="Orders\TrashHandler.cs" />
+    <Compile Include="Orders\TrashModule.cs" />
     <Compile Include="Products\Domain\Product.cs" />
     <Compile Include="Infrastructure\Installers\NHibernateInstaller.cs" />
     <Compile Include="Infrastructure\Installers\RepositoryInstaller.cs" />
