--- a/RestBucks/Web.config
+++ b/RestBucks/Web.config
@@ -10,17 +10,17 @@
     <modules runAllManagedModulesForAllRequests="true">
       <add name="UrlRoutingModule" type="System.Web.Routing.UrlRoutingModule, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     </modules>
-    <validation validateIntegratedModeConfiguration="false" />
-    <handlers>
+    
+    
+  <validation validateIntegratedModeConfiguration="false" /><httpErrors existingResponse="PassThrough" /><handlers>
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-    </handlers>
-  </system.webServer>
+    </handlers></system.webServer>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
-    <httpHandlers>
+    
+  <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-    </httpHandlers>
-  </system.web>
+    </httpHandlers></system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
